[gd_scene load_steps=2 format=3 uid="uid://bh6ff14e825fh"]

[ext_resource type="Script" path="res://assets/scripts/LevelSelectUI.gd" id="1_v6kpm"]

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource("1_v6kpm")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Select Level"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="LevelList" type="ItemList" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Level description"
autowrap_mode = 3

[node name="ParLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Par: 3"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Play Level"

[node name="BackButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"
